--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,18 @@
+# Core
+setuptools>=65.0.0
+wheel>=0.40.0
+
 # Flask และส่วนขยาย
 Flask==3.0.0
 Flask-RESTful==0.3.10
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.3
-Flask-Bcrypt==1.0.1
+Werkzeug==3.0.0
 gunicorn==21.2.0
 
 # Database
 pymongo==4.6.0
-mongoengine==0.27.0
-
-# AI และ Machine Learning (minimal)
-numpy==1.24.4
-openai==1.3.7
 
 # Utilities
 python-dotenv==1.0.0
 requests==2.31.0
-pyjwt==2.8.0
